<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/postButton"
        android:layout_alignBottom="@+id/postButton"
        android:layout_centerHorizontal="true"
        android:text="@string/restart" />

    <EditText
        android:id="@+id/domainInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/portInput"
        android:layout_below="@+id/finalScore"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/domain" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/finalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="" />

    <EditText
        android:id="@+id/portInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/domainInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/port" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/portInput"
        android:layout_below="@+id/portInput"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/name" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="22dp"
        android:text="@string/post" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/restartButton"
        android:layout_alignBottom="@+id/restartButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="21dp"
        android:text="@string/exit" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/serverScores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:text="" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
